saint-lascivious.github.io: remove more redundant span tags
Changes to be committed:
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   connecttosainternet.html

--- a/.formatted/archive.html
+++ b/.formatted/archive.html
@@ -184,7 +184,7 @@
               <li><a href="archive.html#munin-pihole-plugins-v08-02-00" class="embiggen">Munin Pi-hole Plugins: 08.02.00</a></li>
               <li><a href="archive.html#reportingproblems" class="embiggen">Reporting Problems</a></li>
               <li><a href="archive.html#aquickstop" class="embiggen">A QUICk Stop</a></li>
-              <li><a href="archive.html#materialdesigndark" class="embiggen">Material Design <s>Lite</s> Dark</a></span></li>
+              <li><a href="archive.html#materialdesigndark" class="embiggen">Material Design <s>Lite</s> Dark</a></li>
               <li><a href="archive.html#iosmacosmadeeasy" class="embiggen">iOS/macOS Made Easy</a></li>
             </ul>
           </div>
