--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -195,7 +195,7 @@
             </button>
             <button class="mdl-tooltip mdl-tooltip--top" for="button_pingserviceworker">
               Ping service worker
-            </span>
+            </button>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="serviceworkerinfo">
