--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -184,10 +184,10 @@
             </ul>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="androidprivatedns">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
-            <h3 id="androidprivatedns"><icon class="fa-brands fa-android"></icon>&nbsp;<span class="embiggen">Android<br>Private DNS</h3>
+            <h3 class="embiggen"><icon class="fa-brands fa-android"></icon>&nbsp;Android<br>Private DNS</h3>
             <p class="embiggen sainternet-subheader-centered">
               Android 9 (Pie) or higher required.
             </p>
@@ -205,7 +205,7 @@
         <div class="sainternet-container mdl-grid" id="appleiosmacos">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><icon class="fa-brands fa-apple"></icon>&nbsp;<span class="embiggen">Apple<br>iOS/macOS</h3>
+            <h3 class="embiggen"><icon class="fa-brands fa-apple"></icon>&nbsp;Apple<br>iOS/macOS</h3>
             <p class="embiggen sainternet-subheader-centered">
               Apple iOS 14/macOS Big Sur or higher required.
             </p>
@@ -220,21 +220,30 @@
             <div class="sainternet-list-action mdl-list">
               <div class="mdl-list__item">
                 <span class="embiggen mdl-list__item-primary-content">
-                  <span>DNS over HTTPS</span>
+                  DNS over HTTPS
                 </span>
-                <a class="mdl-list__item-secondary-action"  href="downloads/apple/sainternet-https-only.mobileconfig" download="sainternet-https-only.mobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
+                <a class="mdl-list__item-secondary-action" download="sainternet-https-only.mobileconfig" href="downloads/apple/sainternet-https-only.mobileconfig" id="httpsmobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
+                <a class="mdl-tooltip mdl-tooltip--top" for="httpsmobileconfig">
+                  Download HTTPS .mobileconfig for Apple iOS/macOS.
+                </a>
               </div>
               <div class="mdl-list__item">
                 <span class="embiggen mdl-list__item-primary-content">
-                  <span>DNS over TLS</span>
+                  DNS over TLS
                 </span>
-                <a class="mdl-list__item-secondary-action"  href="downloads/apple/sainternet-tls-only.mobileconfig" download="sainternet-tls-only.mobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
+                <a class="mdl-list__item-secondary-action" download="sainternet-tls-only.mobileconfig" href="downloads/apple/sainternet-tls-only.mobileconfig" id="tlsmobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
+                <a class="mdl-tooltip mdl-tooltip--left" for="tlsmobileconfig">
+                  Download TLS .mobileconfig for Apple iOS/macOS.
+                </a>
               </div>
               <div class="mdl-list__item" id="recommendeddnsprofile">
                 <span class="embiggen mdl-list__item-primary-content">
-                  <span>DNS over HTTPS/TLS</span>
+                  DNS over HTTPS/TLS
                 </span>
-                <a class="mdl-list__item-secondary-action"  href="downloads/apple/sainternet-https-and-tls.mobileconfig" download="sainternet-https-and-tls.mobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
+                <a class="mdl-list__item-secondary-action" download="sainternet-https-and-tls.mobileconfig" href="downloads/apple/sainternet-https-and-tls.mobileconfig" id="httpstlsmobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
+                <a class="mdl-tooltip mdl-tooltip--bottom" for="httpstlsmobileconfig">
+                  Download HTTPS/TLS .mobileconfig for Apple iOS/macOS.
+                </a>
               </div>
             </div>
             <p>
@@ -249,7 +258,7 @@
         <div class="sainternet-container mdl-grid" id="googlechromechromium">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><icon class="fa-brands fa-chrome"></icon>&nbsp;<span class="embiggen">Google<br>Chrome/Chromium</h3>
+            <h3 class="embiggen"><icon class="fa-brands fa-chrome"></icon>&nbsp;Google<br>Chrome/Chromium</h3>
             <ol>
               <li>Overflow Menu&nbsp;<icon class="material-icons">more_vert</icon></li>
               <li>Settings&nbsp;<icon class="material-icons">settings</icon></li>
@@ -261,10 +270,10 @@
             </ol>
           </div>
         </div>
-        <div class="sainternet-container mdl-grid">
+        <div class="sainternet-container mdl-grid" id="mozillafirefox">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
-            <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon>&nbsp;<span class="embiggen">Mozilla<br>Firefox</h3>
+            <h3 class="embiggen"><icon class="fa-brands fa-firefox-browser"></icon>&nbsp;Mozilla<br>Firefox</h3>
             <ol>
               <li>Menu&nbsp;<icon class="material-icons">menu</icon></li>
               <li>Settings&nbsp;<icon class="material-icons">settings</icon></li>
