saint-lascivious.github.io: minor formatting
Changes to be committed:
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/newsandupdates.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   newsandupdates.html
 - modified:   resources/stylesheets/.formatted/sainternet.min.css
 - modified:   resources/stylesheets/sainternet.min.css

--- a/.formatted/archive.html
+++ b/.formatted/archive.html
@@ -236,7 +236,7 @@
               Notes:
             </p>
             <ol>
-              <li>If you are using the <code>telnet</code> API, which is the plugin default, these changes do not concern you.</li>
+              <li>If you are using the <code>telnet</code> API these changes do not concern you</li>
             </ol>
           </div>
         </div>
