--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -210,8 +210,8 @@
               Apple iOS 14/macOS Big Sur or higher required.
             </p>
             <ol>
-              <li>Select a DNS Profile from below (if you don't know which one to choose, just select <a href="#recommendeddnsprofile">DNS over HTTPS/TLS</a>)</li>
-              <li>Download the selected DNS Profile (click the icon to download)</li>
+              <li>Select a DNS Profile from below<br>(If you can't decide, just pick <a href="#recommendeddnsprofile">DoHTTPS/TLS</a>.)</li>
+              <li>Download the selected DNS Profile<br>(Click the icon to download.)</li>
               <li>Navigate to the downloaded DNS Profile</li>
               <li>Open the DNS Profile</li>
               <li>Agree to any/all prompts</li>
@@ -219,39 +219,27 @@
             </ol>
             <div class="sainternet-list-action mdl-list">
               <div class="mdl-list__item">
-                <span class="embiggen mdl-list__item-primary-content">
-                  DNS over HTTPS
-                </span>
+                <span class="embiggen mdl-list__item-primary-content">DNS over HTTPS</span>
                 <a class="mdl-list__item-secondary-action" download="sainternet-https-only.mobileconfig" href="downloads/apple/sainternet-https-only.mobileconfig" id="httpsmobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--top" for="httpsmobileconfig">
-                  Download HTTPS .mobileconfig for Apple iOS/macOS.
-                </a>
+                <a class="mdl-tooltip mdl-tooltip--top" for="httpsmobileconfig">Download HTTPS .mobileconfig for Apple iOS/macOS.</a>
               </div>
               <div class="mdl-list__item">
-                <span class="embiggen mdl-list__item-primary-content">
-                  DNS over TLS
-                </span>
+                <span class="embiggen mdl-list__item-primary-content">DNS over TLS</span>
                 <a class="mdl-list__item-secondary-action" download="sainternet-tls-only.mobileconfig" href="downloads/apple/sainternet-tls-only.mobileconfig" id="tlsmobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--left" for="tlsmobileconfig">
-                  Download TLS .mobileconfig for Apple iOS/macOS.
-                </a>
+                <a class="mdl-tooltip mdl-tooltip--left" for="tlsmobileconfig">Download TLS .mobileconfig for Apple iOS/macOS.</a>
               </div>
               <div class="mdl-list__item" id="recommendeddnsprofile">
-                <span class="embiggen mdl-list__item-primary-content">
-                  DNS over HTTPS/TLS
-                </span>
+                <span class="embiggen mdl-list__item-primary-content">DNS over HTTPS/TLS</span>
                 <a class="mdl-list__item-secondary-action" download="sainternet-https-and-tls.mobileconfig" href="downloads/apple/sainternet-https-and-tls.mobileconfig" id="httpstlsmobileconfig"><icon class="material-icons mdl-list__item-icon">file_download</icon></a>
-                <a class="mdl-tooltip mdl-tooltip--bottom" for="httpstlsmobileconfig">
-                  Download HTTPS/TLS .mobileconfig for Apple iOS/macOS.
-                </a>
+                <a class="mdl-tooltip mdl-tooltip--bottom" for="httpstlsmobileconfig">Download HTTPS/TLS .mobileconfig for Apple iOS/macOS.</a>
               </div>
             </div>
             <p>
               Notes:
             </p>
             <ol>
-              <li>These profiles are not digitally signed and that is expected/normal.</li>
-              <li>Sainternet intentionally disables Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent it from bypassing Sainternet.</li>
+              <li>These profiles are not digitally signed and that is expected/normal</li>
+              <li>Sainternet intentionally disables Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent it from bypassing Sainternet</li>
             </ol>
           </div>
         </div>
@@ -291,7 +279,7 @@
               Notes:
             </p>
             <ol>
-              <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> to prevent it from bypassing Sainternet (ignored if manually configured).</li>
+              <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> to prevent it from bypassing Sainternet<br>(Ignored if manually configured.)</li>
             </ol>
           </div>
         </div>
