--- a/.formatted/filtereddns.html
+++ b/.formatted/filtereddns.html
@@ -201,7 +201,7 @@
               Notes:
             </p>
             <ol>
-              <li>You can find information about the technologies used to power Sainternet Filtered DNS <a href="technologies.html">here</a>.</li>
+              <li>You can find information about the technologies used to power Sainternet Filtered DNS <a href="technologies.html">here</a></li>
             </ol>
           </div>
         </div>
