--- a/.formatted/frequentlyaskedquestions.html
+++ b/.formatted/frequentlyaskedquestions.html
@@ -339,8 +339,8 @@
               Notes:
             </p>
             <ol>
-              <li>What "mostly specification compliant" means is that relevant specifications are adhered to, provided they don't provide a net negative experience for other Sainternet DNS users and/or the Internet at large.<br>Examples of this include but are not limited to: Denial of the request type "ANY", refusing very large/oversize but otherwise valid payloads, selective rate limiting/introducing progressive jitter, etc.</li>
-              <li>Here "zero logging policy" refers to a self enforced policy whereby any/all logging of relevant services (those involved with processing some or all of a Sainternet DNS query and its response) are either disabled entirely, or set to their minimum possible verbosity and redirected to "/dev/null".</li>
+              <li>What "mostly specification compliant" means is that relevant specifications are adhered to provided they don't provide a net negative experience for other Sainternet DNS users and/or the Internet at large<br>Examples of this include but are not limited to: Denial of the request type "ANY", refusing very large/oversize but otherwise valid payloads, selective rate limiting/introducing progressive jitter, etc.</li>
+              <li>Here "zero logging policy" refers to a self enforced policy whereby any/all logging of relevant services (those involved with processing some or all of a Sainternet DNS query and its response) are either disabled entirely, or set to their minimum possible verbosity and redirected to "/dev/null"</li>
             </ol>
             <p class="embiggen sainternet-subheader-centered">
               When?
