--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -334,8 +334,8 @@
               I have included only the results which:
             </p>
             <ol>
-              <li>Were at or above 2% of total hits.</li>
-              <li>I thought were interesting or otherwise significant.</li>
+              <li>Were at or above 2% of total hits</li>
+              <li>I thought were interesting or otherwise significant</li>
             </ol>
             <div class="enlift rounded-corners shadow-boxing">
               <table>
@@ -592,9 +592,9 @@
             <p>
               But wait, doesn't <code>dns.sainternet.xyz</code> block Google Analytics and many more telemetry services from functioning?
             </p>
-            <ul>
-              <li>Good question. Yes. Yes it does.</li>
-            </ul>
+            <p>
+              Good question. Yes. Yes it does.
+            </p>
             <p>
               That's the beauty of it, and the reason I had no qualms about implementing this. Once you're using <code>dns.sainternet.xyz</code>, analytics collection on this site is rendered entirely ineffective.
             </p>
@@ -620,7 +620,7 @@
               Why would you want to? Who knows. The point is you can. Behind the scenes the site is also more secure, and now slicker than ever.
             </p>
             <ol>
-              <li id="pwasupportdisclaimer">Support on iOS, macOS, and Windows I am not entirely confident about.</li>
+              <li id="pwasupportdisclaimer">Support on iOS, macOS, and Windows I am not entirely confident about</li>
             </ol>
           </div>
         </div>
