saint-lascivious.github.io: big mad, grr
Changes to be committed:
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   newsandupdates.html
 - modified:   portsandprotocols.html
 - modified:   resources/javascript/.formatted/random_url.min.js
 - modified:   resources/javascript/random_url.min.js
 - modified:   serviceworker.min.js

--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -200,6 +200,7 @@
               <li><a href="archive.html#archivedposts" class="embiggen">Archived Posts</a></li>
             </ul>
             <ul>
+              <li><a href="newsandupdates.html#thisiswhywecanthavenicethings" class="embiggen">This Is Why We Can’t Have Nice Things</a></li>
               <li><a href="newsandupdates.html#everycatdeservesscritchesalways" class="embiggen">Every Cat Deserves Scritches, Always</a></li>
               <li><a href="newsandupdates.html#somepunaboutblocksorblocking" class="embiggen">Some Pun About Blocks or Blocking</a></li>
               <li><a href="newsandupdates.html#thepolishinvasionof2023" class="embiggen">The Polish Invasion of 2023</a></li>
@@ -208,6 +209,18 @@
               <li><a href="newsandupdates.html#analyticsdisclosure" class="embiggen">Analytics Disclosure</a></li>
               <li><a href="newsandupdates.html#pwa" class="embiggen">PWA!</a></li>
             </ul>
+          </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="thisiswhywecanthavenicethings">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">This Is Why We Can’t Have Nice Things</h3>
+            <p class="embiggen" id="datetime">
+              first posted on Wednesday, 5 July 2023 21:30+12:00 (NZST)
+            </p>
+            <p>
+              Due to fuckery, <a href="portsandprotocols.html#unencrypteddns">Unencrypted DNS</a> has been disabled until further notice.
+            </p>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="everycatdeservesscritchesalways">
