--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -246,6 +246,12 @@
                 </tr>
               </table>
             </div>
+            <p>
+              Notes:
+            </p>
+            <ul>
+              <li><a href="newsandupdates.html#thisiswhywecanthavenicethings">This Is Why We Can’t Have Nice Things</a></li>
+            </ul>
           </div>
         </div>
       </main>
