--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -183,9 +183,13 @@
             </p>
             <ul>
               <li><a href="265.html#265examplequeries" class="embiggen">Example Pokédex over DNS Queries</a></li>
+<!--
               <li><a href="265.html#265examplequeryusingdig" class="embiggen">Using dig</a></li>
+-->
               <li><a href="265.html#265examplequeryusingdnslookup" class="embiggen">Using dnslookup</a></li>
+<!--
               <li><a href="265.html#265examplequeryusingnslookup" class="embiggen">Using nslookup</a></li>
+-->
             </ul>
             <p>
               Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.
@@ -213,6 +217,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <h3 class="embiggen">Example Pokédex over DNS Queries</h3>
+<!--
             <p class="embiggen sainternet-subheader-centered" id="265examplequeryusingdig">
               Using dig
             </p>
@@ -249,6 +254,7 @@
             <div class="enlift rounded-corners shadow-boxing">
               <pre>dig +short txt waumpel.pokedex @dns.sainternet.xyz</pre>
             </div>
+-->
             <p class="embiggen sainternet-subheader-centered" id="examplequeryusingdnslookup">
               Using dnslookup
             </p>
@@ -259,32 +265,33 @@
               National Pokédex
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup 265.pokedex dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup 265.pokedex https://dns.sainternet.xyz</pre>
             </div>
             <p>
               English US
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup wurmple.pokedex dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup wurmple.pokedex https://dns.sainternet.xyz</pre>
             </div>
             <p>
               Nihon
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup kemusso.pokedex dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup kemusso.pokedex https://dns.sainternet.xyz</pre>
             </div>
             <p>
               Français
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup chenipotte.pokedex dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup chenipotte.pokedex https://dns.sainternet.xyz</pre>
             </div>
             <p>
               Deutsch
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup waumpel.pokedex dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup waumpel.pokedex https://dns.sainternet.xyz</pre>
             </div>
+<!--
             <p class="embiggen sainternet-subheader-centered" id="examplequeryusingnslookup">
               Using nslookup
             </p>
@@ -321,6 +328,7 @@
             <div class="enlift rounded-corners shadow-boxing">
               <pre>nslookup -type=txt waumpel.pokedex dns.sainternet.xyz</pre>
             </div>
+-->
           </div>
         </div>
       </main>
