--- a/.formatted/testsainternet.html
+++ b/.formatted/testsainternet.html
@@ -179,12 +179,17 @@
               The following describes testing Sainternet Filtered DNS using several methods, utilities.
             </p>
             <ul>
+<!--
               <li><a href="testsainternet.html#usingdig" class="embiggen">Using dig</a></li>
+-->
               <li><a href="testsainternet.html#usingdnslookup" class="embiggen">Using dnslookup</a></li>
+<!--
               <li><a href="testsainternet.html#usingnslookup" class="embiggen">Using nslookup</a></li>
+-->
             </ul>
           </div>
         </div>
+<!--
         <div class="sainternet-container mdl-grid" id="usingdig">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
@@ -228,6 +233,7 @@ example.org.            86282   IN      A       93.184.216.34
             </div>
           </div>
         </div>
+-->
         <div class="sainternet-container mdl-grid" id="usingdnslookup">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
@@ -236,7 +242,7 @@ example.org.            86282   IN      A       93.184.216.34
               Example Sainternet test query using <a href="https://github.com/ameshkov/dnslookup">dnslookup</a>:
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup test.sainternet.xyz dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup test.sainternet.xyz https://dns.sainternet.xyz</pre>
             </div>
             <div class="enlift rounded-corners shadow-boxing">
               <pre>
@@ -256,7 +262,7 @@ test.sainternet.xyz.    60      IN      TXT     "SAINTERNET -- TEST PASSED -- Th
               Example Sainternet dnslookup query:
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>dnslookup example.org dns.sainternet.xyz</pre>
+              <pre>dnslookup example.org https://dns.sainternet.xyz</pre>
             </div>
             <div class="enlift rounded-corners shadow-boxing">
               <pre>
@@ -272,6 +278,7 @@ dnslookup result (elapsed 4.101185ms):
 example.org.    84557   IN      A       93.184.216.34
               </pre>
             </div>
+<!--
             <p>
               Example Sainternet dnslookup query using the TCP protocol:
             </p>
@@ -284,6 +291,7 @@ example.org.    84557   IN      A       93.184.216.34
             <div class="enlift rounded-corners shadow-boxing">
               <pre>dnslookup example.org udp://dns.sainternet.xyz</pre>
             </div>
+-->
             <p>
               Example Sainternet dnslookup query using the HTTP/2 protocol (DoH):
             </p>
@@ -316,6 +324,7 @@ example.org.    84557   IN      A       93.184.216.34
             </div>
           </div>
         </div>
+<!--
         <div class="sainternet-container mdl-grid" id="usingnslookup">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
@@ -356,6 +365,7 @@ Address: 2606:2800:220:1:248:1893:25c8:1946
             </div>
           </div>
         </div>
+-->
       </main>
     <footer class="sainternet-footer mdl-mini-footer">
       <div class="mdl-mini-footer--left-section">
