saint-lascivious.github.io: yeet copy_text
Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   265.html
 - deleted:    resources/javascript/.formatted/copy_text.min.js
 - deleted:    resources/javascript/copy_text.min.js
 - modified:   serviceworker.min.js

--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -103,8 +103,6 @@
     <script type="text/javascript" src="resources/javascript/load_mono_fonts.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/toggle_drawer.min.js">
     <script type="text/javascript" src="resources/javascript/toggle_drawer.min.js" defer></script>
-    <link rel="preload" as="script" href="resources/javascript/copy_text.min.js">
-    <script type="text/javascript" src="resources/javascript/copy_text.min.js" defer></script>
     <link rel="preload" as="script" href="sainternet.min.js">
     <script type="text/javascript" src="sainternet.min.js" defer></script>
 
@@ -267,31 +265,31 @@
               National Pokédex
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre id="dnslookupquerynationalpokedex" onclick="copyToClipboard(dnslookupquerynationalpokedex);">RRTYPE=TXT dnslookup 265.pokedex https://dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup 265.pokedex https://dns.sainternet.xyz</pre>
             </div>
             <p>
               English US
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre id="dnslookupqueryenglishus" onclick="copyToClipboard(dnslookupqueryenglishus);">RRTYPE=TXT dnslookup wurmple.pokedex https://dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup wurmple.pokedex https://dns.sainternet.xyz</pre>
             </div>
             <p>
               Nihon
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre id="dnslookupquerynihon" onclick="copyToClipboard(dnslookupquerynihon);">RRTYPE=TXT dnslookup kemusso.pokedex https://dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup kemusso.pokedex https://dns.sainternet.xyz</pre>
             </div>
             <p>
               Français
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre id="dnslookupqueryfrancias" onclick="copyToClipboard(dnslookupqueryfrancais);">RRTYPE=TXT dnslookup chenipotte.pokedex https://dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup chenipotte.pokedex https://dns.sainternet.xyz</pre>
             </div>
             <p>
               Deutsch
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre id="dnslookupquerydeutsch" onclick="copyToClipboard(dnslookupquerydeutsch);">RRTYPE=TXT dnslookup waumpel.pokedex https://dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup waumpel.pokedex https://dns.sainternet.xyz</pre>
             </div>
 <!--
             <p class="embiggen sainternet-subheader-centered" id="265examplequeryusingnslookup">
