saint-lascivious.github.io: update https\3 endpoints
Changes to be committed:
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   connecttosainternet.html
 - modified:   portsandprotocols.html
 - modified:   serviceworker.min.js

--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -253,7 +253,7 @@
               <li>Select "Privacy and security"</li>
               <li>Select "Use secure DNS"</li>
               <li>Select "Choose another provider"</li>
-              <li>Enter <code>dns.sainternet.xyz</code></li>
+              <li>Enter <code>https://dns.sainternet.xyz/dns-query</code></li>
               <li>Done</li>
             </ol>
           </div>
@@ -271,7 +271,7 @@
               <li>Select "Enable DNS over HTTPS"</li>
               <li>Select "Use Provider"</li>
               <li>Select "Custom"</li>
-              <li>Enter <code>dns.sainternet.xyz</code></li>
+              <li>Enter <code>https://dns.sainternet.xyz/dns-query</code></li>
               <li>Select "OK"</li>
               <li>Done</li>
             </ol>
