--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -206,22 +206,22 @@
                 </tr>
                 <tr>
                   <td><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS" id="dnsoverhttps">HTTPS</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttps">DNS over HTTPS</a></td>
-                  <td><code>dns.sainternet.xyz</code></td>
+                  <td><code>https://dns.sainternet.xyz/dns-query</code></td>
                   <td>TCP<br><code>443</code></td>
                 </tr>
                 <tr>
                   <td><a href="https://en.wikipedia.org/wiki/HTTP/3" id="dnsoverhttp3">HTTP/3</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttp3">DNS over HTTP/3</a></td>
-                  <td><code>dns.sainternet.xyz</code></td>
+                  <td><code>h3://dns.sainternet.xyz/dns-query</code></td>
                   <td>UDP<br><code>443</code></td>
                 </tr>
                 <tr>
                   <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS" id="dnsovertls">TLS</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsovertls">DNS over TLS</a></td>
-                  <td><code>dns.sainternet.xyz</code></td>
+                  <td><code>tls://dns.sainternet.xyz</code></td>
                   <td>TCP<br><code>853</code></td>
                 </tr>
                 <tr>
                   <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC" id="dnsoverquic">QUIC</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttps">DNS over QUIC</a></td>
-                  <td><code>dns.sainternet.xyz</code></td>
+                  <td><code>quic://dns.sainternet.xyz</code></td>
                   <td>UDP<br><code>853</code></td>
                 </tr>
               </table>
