saint-lascivious.github.io: update dns profiles, endpoints, lists
Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   downloads/apple/sainternet-https-and-tls.mobileconfig
 - modified:   downloads/apple/sainternet-https-only.mobileconfig
 - modified:   downloads/apple/sainternet-tls-only.mobileconfig
 - modified:   downloads/lists/virtual-top-level-domains-for-dns-server-interrogation.txt
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   serviceworker.min.js
 - modified:   testsainternet.html

--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -259,31 +259,31 @@
               National Pokédex
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup 404.pokedex https://dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup 404.pokedex https://dns.sainternet.xyz/dns-query</pre>
             </div>
             <p>
               English US
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup luxio.pokedex https://dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup luxio.pokedex https://dns.sainternet.xyz/dns-query</pre>
             </div>
             <p>
               Nihon
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup luxio.pokedex https://dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup luxio.pokedex https://dns.sainternet.xyz/dns-query</pre>
             </div>
             <p>
               Français
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup luxio.pokedex https://dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup luxio.pokedex https://dns.sainternet.xyz/dns-query</pre>
             </div>
             <p>
               Deutsch
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup luxio.pokedex https://dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup luxio.pokedex https://dns.sainternet.xyz/dns-query</pre>
             </div>
 <!--
             <p class="embiggen sainternet-subheader-centered" id="404examplequeryusingnslookup">
