--- a/.formatted/testsainternet.html
+++ b/.formatted/testsainternet.html
@@ -242,7 +242,7 @@ example.org.            86282   IN      A       93.184.216.34
               Example Sainternet test query using <a href="https://github.com/ameshkov/dnslookup">dnslookup</a>:
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup test.sainternet.xyz https://dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup test.sainternet.xyz https://dns.sainternet.xyz/dns-query</pre>
             </div>
             <div class="enlift rounded-corners shadow-boxing">
               <pre>
@@ -262,7 +262,7 @@ test.sainternet.xyz.    60      IN      TXT     "SAINTERNET -- TEST PASSED -- Th
               Example Sainternet dnslookup query:
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>dnslookup example.org https://dns.sainternet.xyz</pre>
+              <pre>dnslookup example.org https://dns.sainternet.xyz/dns-query</pre>
             </div>
             <div class="enlift rounded-corners shadow-boxing">
               <pre>
@@ -296,7 +296,7 @@ example.org.    84557   IN      A       93.184.216.34
               Example Sainternet dnslookup query using the HTTP/2 protocol (DoH):
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>dnslookup example.org https://dns.sainternet.xyz</pre>
+              <pre>dnslookup example.org https://dns.sainternet.xyz/dns-query</pre>
             </div>
             <p>
               Example Sainternet dnslookup query using the TLS protocol (DoT):
@@ -308,7 +308,7 @@ example.org.    84557   IN      A       93.184.216.34
               Example Sainternet dnslookup query using the HTTP/3 protocol (DoH/3) opportunistically:
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>HTTP3=1 dnslookup example.org https://dns.sainternet.xyz</pre>
+              <pre>HTTP3=1 dnslookup example.org https://dns.sainternet.xyz/dns-query</pre>
             </div>
             <p>
               Example Sainternet dnslookup query using the HTTP/3 protocol (DoH/3):
