--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -265,31 +265,31 @@
               National Pokédex
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup 265.pokedex https://dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup 265.pokedex https://dns.sainternet.xyz/dns-query</pre>
             </div>
             <p>
               English US
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup wurmple.pokedex https://dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup wurmple.pokedex https://dns.sainternet.xyz/dns-query</pre>
             </div>
             <p>
               Nihon
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup kemusso.pokedex https://dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup kemusso.pokedex https://dns.sainternet.xyz/dns-query</pre>
             </div>
             <p>
               Français
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup chenipotte.pokedex https://dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup chenipotte.pokedex https://dns.sainternet.xyz/dns-query</pre>
             </div>
             <p>
               Deutsch
             </p>
             <div class="enlift rounded-corners shadow-boxing">
-              <pre>RRTYPE=TXT dnslookup waumpel.pokedex https://dns.sainternet.xyz</pre>
+              <pre>RRTYPE=TXT dnslookup waumpel.pokedex https://dns.sainternet.xyz/dns-query</pre>
             </div>
 <!--
             <p class="embiggen sainternet-subheader-centered" id="265examplequeryusingnslookup">
