--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -216,12 +216,12 @@
                 </tr>
                 <tr>
                   <td><a href="https://en.wikipedia.org/wiki/DNS_over_TLS" id="dnsovertls">TLS</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsovertls">DNS over TLS</a></td>
-                  <td><code>tls://dns.sainternet.xyz</code></td>
+                  <td><code>tls://dns.sainternet.xyz:853</code></td>
                   <td>TCP<br><code>853</code></td>
                 </tr>
                 <tr>
                   <td><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC" id="dnsoverquic">QUIC</a><a class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttps">DNS over QUIC</a></td>
-                  <td><code>quic://dns.sainternet.xyz</code></td>
+                  <td><code>quic://dns.sainternet.xyz:853</code></td>
                   <td>UDP<br><code>853</code></td>
                 </tr>
               </table>
