--- a/.formatted/archive.html
+++ b/.formatted/archive.html
@@ -180,6 +180,7 @@
           <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <h3 class="embiggen">Archived Posts</h3>
             <ul>
+              <li><a href="newsandupdates.html#thisiswhywecanthavenicethings" class="embiggen">This Is Why We Can’t Have Nice Things</a></li>
               <li><a href="archive.html#2022metrics" class="embiggen">2022 Metrics</a></li>
               <li><a href="archive.html#munin-pihole-plugins-v08-02-00" class="embiggen">Munin Pi-hole Plugins: 08.02.00</a></li>
               <li><a href="archive.html#reportingproblems" class="embiggen">Reporting Problems</a></li>
@@ -187,6 +188,18 @@
               <li><a href="archive.html#materialdesigndark" class="embiggen">Material Design <s>Lite</s> Dark</a></li>
               <li><a href="archive.html#iosmacosmadeeasy" class="embiggen">iOS/macOS Made Easy</a></li>
             </ul>
+          </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="thisiswhywecanthavenicethings">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">This Is Why We Can’t Have Nice Things</h3>
+            <p class="embiggen" id="datetime">
+              first posted on Wednesday, 5 July 2023 21:30+12:00 (NZST)
+            </p>
+            <p>
+              Due to fuckery, <a href="portsandprotocols.html#unencrypteddns">Unencrypted DNS</a> has been disabled until further notice.
+            </p>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="2022metrics">
