saint-lascivious.github.io: old blog, new tricks
detail (mostly) unfiltered resolution

Changes to be committed:
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   connecttosainternet.html
 - modified:   newsandupdates.html
 - modified:   portsandprotocols.html
 - modified:   resources/javascript/.formatted/random_url.min.js
 - modified:   resources/javascript/random_url.min.js
 - modified:   serviceworker.min.js

--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -200,6 +200,12 @@
               <li>Enter <code>dns.sainternet.xyz</code></li>
               <li>Done</li>
             </ol>
+            <p>
+              Notes:
+            </p>
+            <ul>
+              <li>You can instead use <code>unfiltered-client.dns.sainternet.xyz</code> for (mostly) unfiltered resolution.</li>
+            </ul>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="appleiosmacos">
@@ -258,6 +264,12 @@
               <li>Enter <code>https://dns.sainternet.xyz/dns-query</code></li>
               <li>Done</li>
             </ol>
+            <p>
+              Notes:
+            </p>
+            <ul>
+              <li>You can instead use <code>https://unfiltered-client.dns.sainternet.xyz/dns-query</code> for (mostly) unfiltered resolution.</li>
+            </ul>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="mozillafirefox">
@@ -282,6 +294,7 @@
             </p>
             <ul>
               <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> to prevent it from bypassing Sainternet<br>(Ignored if manually configured.)</li>
+              <li>You can instead use <code>https://unfiltered-client.dns.sainternet.xyz/dns-query</code> for (mostly) unfiltered resolution.</li>
             </ul>
           </div>
         </div>
