--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -200,6 +200,7 @@
               <li><a href="archive.html#archivedposts" class="embiggen">Archived Posts</a></li>
             </ul>
             <ul>
+              <li><a href="newsandupdates.html#oldblognewtricks" class="embiggen">Old Blog, New Tricks</a></li>
               <li><a href="newsandupdates.html#everycatdeservesscritchesalways" class="embiggen">Every Cat Deserves Scritches, Always</a></li>
               <li><a href="newsandupdates.html#somepunaboutblocksorblocking" class="embiggen">Some Pun About Blocks or Blocking</a></li>
               <li><a href="newsandupdates.html#thepolishinvasionof2023" class="embiggen">The Polish Invasion of 2023</a></li>
@@ -208,6 +209,21 @@
               <li><a href="newsandupdates.html#analyticsdisclosure" class="embiggen">Analytics Disclosure</a></li>
               <li><a href="newsandupdates.html#pwa" class="embiggen">PWA!</a></li>
             </ul>
+          </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="oldblognewtricks">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Old Blog, New Tricks</h3>
+            <p class="embiggen" id="datetime">
+              first posted on Wednesday, 13 September 2023 00:20+12:00 (NZST)
+            </p>
+            <p>
+              If you <a href="connecttosainternet.html">Connect to Sainternet</a> using a domain, it is now possible to add the <code>unfiltered-client</code> identifier to your domain query path, for example <code>unfiltered-client.dns.sainternet.xyz</code> or <code>https://unfiltered-client.dns.sainternet.xyz/dns-query</code>.
+            </p>
+            <p>
+              Minor filtering is performed for rate limiting and abuse mitigation, but otherwise no blocking is performed.
+            </p>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="everycatdeservesscritchesalways">
