--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -224,6 +224,12 @@
                 </tr>
               </table>
             </div>
+            <p>
+              Notes:
+            </p>
+            <ul>
+              <li>You can instead use <code>unfiltered-client.dns.sainternet.xyz</code> for (mostly) unfiltered resolution.</li>
+            </ul>
             <p class="embiggen sainternet-subheader-centered" id="unencrypteddns">
               Unencrypted DNS
             </p>
